tests/snapshots/tui_layout__opening_a_commit_splits_the_view.snap
---
source: tests/tui_layout.rs
expression: "draw_review(&mut review, 100, 24)"
---
┌ 5 commits ───────────────────────────────────────────────────────────────────────────────────────┐
│3f2a1c9  2026-08-26  Phase 5: move detection and whitespace modes                                 │
│10f4df2  2026-08-26  Phase 4: the interactive browser                                             │
│5ab2f81  2026-08-26  Phase 3: git integration                                                     │
│47763dd  2026-08-26  Phases 1 and 2: the aligned split view                                       │
│039c984  2026-08-26  Phase 0: scaffold                                                            │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ b/src/diff/moves.rs ────────────────────────────────────────────────────────────────────────────┐│
│let line1 = 1;                             │  1    1 │let line1 = 1;                             ││
│let line2 = 2;                             │  2    2 │let line2 = 2;                             ││
│let line3 = 3;                             │  3    3 │let line3 = 3;                             ││
│let line4 = 4;                             │  4    4 │let line4 = 4;                             │▐
│let line5 = 5;                             │  5 ~  5 │let line5 = 500;                           ││
│let line6 = 6;                             │  6    6 │let line6 = 6;                             ││
│let line7 = 7;                             │  7    7 │let line7 = 7;                             │╌
│let line8 = 8;                             │  8    8 │let line8 = 8;                             ││
│───────────────────────────────────── ⋯ 23 unchanged lines ──────────────────────────────────────││
│let line32 = 32;                           │ 32   32 │let line32 = 32;                           ││
│let line33 = 33;                           │ 33   33 │let line33 = 33;                           │▐
│let line34 = 34;                           │ 34   34 │let line34 = 34;                           ││
│let line35 = 35;                           │ 35 ~ 35 │let line35 = 3500;                         ││
└─────────────────────────────────────────────────────────────────────────────────────────────────┘╌
1 file came from a patch and cannot be diffed again
