tests/snapshots/tui_layout__the_file_list_in_a_review_can_be_focused.snap
---
source: tests/tui_layout.rs
expression: "draw_review(&mut review, 110, 24)"
---
┌ 1 commit ──────────────────────────────────────────────────────────────────────────────────────────────────┐
│3f2a1c9  2026-08-26  Phase 5: move detection                                                                │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
│                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ files ───────────────────────┐┌ b/src/main.rs ────────────────────────────────────────────────────────────┐│
│b/src/main.rs +0 -0 ~2        ││let line1 = 1;                  │  1    1 │let line1 = 1;                  ││
│b/src/lib.rs +0 -0 ~2         ││let line2 = 2;                  │  2    2 │let line2 = 2;                  ││
│b/README.md +0 -0 ~2          ││let line3 = 3;                  │  3    3 │let line3 = 3;                  ││
│                              ││let line4 = 4;                  │  4    4 │let line4 = 4;                  │▐
│                              ││let line5 = 5;                  │  5 ~  5 │let line5 = 500;                ││
│                              ││let line6 = 6;                  │  6    6 │let line6 = 6;                  ││
│                              ││let line7 = 7;                  │  7    7 │let line7 = 7;                  │╌
│                              ││let line8 = 8;                  │  8    8 │let line8 = 8;                  ││
│                              ││────────────────────────── ⋯ 23 unchanged lines ───────────────────────────││
│                              ││let line32 = 32;                │ 32   32 │let line32 = 32;                ││
│                              ││let line33 = 33;                │ 33   33 │let line33 = 33;                │▐
│                              ││let line34 = 34;                │ 34   34 │let line34 = 34;                ││
│                              ││let line35 = 35;                │ 35 ~ 35 │let line35 = 3500;              ││
└──────────────────────────────┘└───────────────────────────────────────────────────────────────────────────┘╌
3 files came from a patch and cannot be diffed again
